--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -4,7 +4,7 @@
 }
 
 .xh_border {
-    border: 2px solid #000 !important;
+    border: 2px dashed #000 !important;
     border-radius: 10px !important;
     padding: 5px !important;
     margin: 50px 0px !important;
