--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,67 +1,8 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 body {
-  font-family: Arial;
-  background: #eee;
-}
-
-.tabs-menu {
-  padding: 20px;
-}
-
-.tablist-reponsiveScroll {
-  overflow-x: auto;
-}
-
-[role=tablist] {
-  padding-left: 0;
-  margin: 6px 0 0;
-  list-style-type: none;
-  display: table;
-  white-space: nowrap;
-}
-
-[role=tablist]:after,
-[role=tablist]:before {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-[role=tablist]>[role=presentation] {
-  display: table-cell;
-}
-
-[role=tablist] [role=tab] {
-  display: block;
-  padding: 12px;
-  background-color: #551a8b;
-  color: #fff;
-  text-decoration: none;
-}
-
-[role=tablist] [role=tab][aria-selected=false]:hover {
-  background-color: #602594;
-}
-
-[role=tablist] [role=tab][aria-selected=true] {
-  background-color: #fff;
-  padding: 13px 12px;
-  color: #551a8b;
-  border-top: 4px solid;
-  margin-top: -6px;
-}
-
-[role=tabpanel] {
-  background: #fff;
-  width: 100%;
-  display: inline-block;
-  padding: 0 16px 8px;
-}
-
-[role=tabpanel][aria-hidden=true] {
-  display: none;
-  visibility: hidden;
+  font-family: Arial !important;
+  background: #eee !important;
 }
